# guion_sdl2

./: .gitlab-ci.yml  Cargo.toml  README.md  guion_sdl2.code-workspace
examples/: 7gui_01_counter_mvp.rs  textbox.rs  zero.rs
src/: as_inner.rs  lib.rs
src/context/: imp.rs  mod.rs  queue.rs
src/core/: mod.rs  queue.rs
src/event/: cast.rs  consuming.rs  destination.rs  imp.rs  key.rs  mod.rs  position.rs  support.rs
src/handler/: imp.rs  mod.rs
src/render/: font.rs  imp.rs  mod.rs  util.rs
src/simple/: ctx.rs  env.rs  immediate_test.rs  mod.rs  path.rs  stor copy.rs  stor.rs  valid.rs
src/style/: color.rs  cursor.rs  default.rs  font.rs  mod.rs  selector.rs
src/util/: mod.rs
