[package]
name = "guion_sdl2"
version = "0.2.0-dev3"

authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

description = "Backend for guion"
categories = ["gui"]
keywords = ["gui","ui","sdl2","sdl"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/ferionve/guion_sdl2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guion = { version = "0.3.0", git = "https://github.com/FerionVE/guion", rev = "adc7b179e3ab839399ebe49b3cf8434e55030708" }
#guion = { path = "../guion" }
#TODO qwutils should export qwutils
qwutils = { version = "0.3.0", git = "https://github.com/qwertz19281/rust_utils", rev = "7959b3c0134fa864c1fd50adbeb063cbfe28e092" }
#qwutils = { path = "../qwutils" }

[dependencies.sdl2]
version = "0.34"
default-features = false
features = []
#apt install libsdl2-dev

[dependencies.rusttype]
version = "0.9"
features = ["gpu_cache"]

[profile.release]
#lto = true # rust-sdl2 UB
codegen-units = 1
