[package]
name = "guion_sdl2"
version = "0.4.0-dev1"

authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2018"

description = "Backend for guion"
categories = ["gui"]
keywords = ["gui","ui","sdl2","sdl"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/ferionve/guion_sdl2"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#guion = "0.4"
guion = { version = "0.4", git = "https://github.com/FerionVE/guion", rev = "1679bd0a" }
#guion = { path = "../guion" }
#TODO qwutils should export qwutils
qwutils = "0.3"
#qwutils = { version = "0.3.1", git = "https://github.com/qwertz19281/rust_utils", rev = "833f581b5e63117fb87a7dad9f41a6532113fd88" }
#qwutils = { path = "../qwutils" }

[dependencies.sdl2]
version = "0.34"
default-features = false
features = []
#apt install libsdl2-dev

[dependencies.rusttype]
version = "0.9"
features = ["gpu_cache"]

[profile.release]
codegen-units = 1
#lto = true # rust-sdl2 UB
